# aac-spec

./: .gitpod.Dockerfile  .gitpod.yml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  DOCUMENTATION-REQUEST.yml  FEATURE-REQUEST.yml  SIMPLE-TASK.yml
.github/workflows/: codeql-analysis.yml  main-branch.yml  python-build-and-lint.yml  python-cross-platform-support.yml  python-deploy-artifacts.yml  python-test-python-version.yml  sphinx.yml
docs/source/: conf.py  index.rst
docs/source/project_documentation/: specifications.md
python/: README.md  archetecture_file.aac  example_spec.yml  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
python/secure_install/install_scripts/: install_aac_air_gap.bash  install_aac_air_gap.bat  install_aac_verified_index.bash  install_aac_verified_index.bat
python/src/specifications/: __init__.py  specifications.aac  specifications.yaml  specifications.yml  specifications_impl.py
python/src/specifications/spec/plugin/specifications/: __init__.py  specifications_impl.py
python/tests/specifications/: test_specifications.py
python/tests/specifications/test_spec/plugin/specifications/: specifications_generate_a_specification_csv.feature  test_specifications.py
